--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -75,34 +75,6 @@ font-size: 20pt;</string>
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="label_choose_variant">
-          <property name="styleSheet">
-           <string notr="true">background-color: rgba(255, 255, 255, 30);
-border: 1px solid rgba(255, 255, 255, 40);
-border-radius: 7px;
-font-weight: bold;
-font-size: 20pt;</string>
-          </property>
-          <property name="text">
-           <string>Необходимо выбрать вариант</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QComboBox" name="comboBox_variants">
-          <property name="enabled">
-           <bool>false</bool>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">background-color: rgba(255, 255, 255, 30);
-border: 1px solid rgba(255, 255, 255, 40);
-border-radius: 7px;
-font-weight: bold;
-font-size: 20pt;</string>
-          </property>
-         </widget>
-        </item>
-        <item>
          <widget class="QPushButton" name="pushButton_do">
           <property name="enabled">
            <bool>false</bool>
@@ -174,7 +146,7 @@ font-weight: bold;
 font-size: 20pt;</string>
         </property>
         <property name="text">
-         <string>results</string>
+         <string>Здесь будут ваши результаты</string>
         </property>
        </widget>
       </item>
@@ -215,19 +187,15 @@ background-color: rgba(255, 255, 255, 70);
        </widget>
       </item>
       <item>
-       <layout class="QVBoxLayout" name="verticalLayout_gantt_chart">
-        <item>
-         <widget class="QGraphicsView" name="graphicsView_grantt_chart">
-          <property name="styleSheet">
-           <string notr="true">background-color: rgba(255, 255, 255, 30);
+       <widget class="QGraphicsView" name="graphicsView_grantt_chart">
+        <property name="styleSheet">
+         <string notr="true">background-color: rgba(255, 255, 255, 30);
 border: 1px solid rgba(255, 255, 255, 40);
 border-radius: 7px;
 font-weight: bold;
 font-size: 20pt;</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
@@ -254,7 +222,6 @@ font-size: 20pt;</string>
      <string>Файл</string>
     </property>
     <addaction name="action_save_data"/>
-    <addaction name="action_save_chart"/>
    </widget>
    <widget class="QMenu" name="menu_data">
     <property name="title">
@@ -266,11 +233,17 @@ font-size: 20pt;</string>
    <addaction name="menu_data"/>
   </widget>
   <action name="action_save_data">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Сохранить данные</string>
    </property>
   </action>
   <action name="action_save_chart">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Сохранить диаграмму</string>
    </property>
